--- a/frontend/css/articles.css
+++ b/frontend/css/articles.css
@@ -146,6 +146,12 @@
 .author,
 article {
     padding: 5px 20px;
-
 }
+
+/*专题名称显示*/
+.subjectTitle {
+    font-size: 16px;
+    margin-left: 10px;
+}
+
     
