--- a/src/main/resources/static/css/subject-article.css
+++ b/src/main/resources/static/css/subject-article.css
@@ -11,6 +11,15 @@
     margin-top: 10px;
 }
 
+input {
+    width: 200px;
+    padding: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
 .articleNav {
     padding: 10px 10px 40px 10px;
     width: 20%;
@@ -36,9 +45,11 @@
     border-left: 1px dotted darkgrey;
 
 }
-#titleTree >li {
+
+#titleTree > li {
     margin: 10px 0;
 }
+
 #titleTree ul li {
     padding: 10px 1em;
     position: relative;
@@ -54,6 +65,7 @@
     border-top: 1px dotted darkgrey;
     width: 15px;
 }
+
 #titleTree ul li:last-child::before {
     content: "";
     display: block;
@@ -66,6 +78,7 @@
     border-right: none;
     border-top: 1px dotted darkgrey;
 }
+
 #titleTree > li > ul > li:last-child::before {
     content: "";
     display: block;
@@ -105,7 +118,7 @@
 }
 
 .articleEdit {
-    padding: 40px 20px;
+    padding: 0 20px 40px 20px;
     width: 80%;
     background-color: white;
     margin-left: 5px;
@@ -189,4 +202,44 @@
     font-weight: bolder;
     color: #282A35;
     margin-bottom: 5px;
+}
+
+
+/*发布状态*/
+.deployStatus {
+    height: 40px;
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+    align-items: center;
+    font-weight: bold;
+}
+
+.deployed {
+    color: #03AA6D;
+}
+
+.unDeployed {
+    color: #dd5e5e;
+}
+
+.hasNoContent {
+    color: #494040;
+}
+
+.statusFlag {
+    font-size: 25px;
+
+}
+
+#titleTree span[data-deploy-status='0'] {
+    color: #494040;
+}
+
+#titleTree span[data-deploy-status='1'] {
+    color: #dd5e5e;
+}
+
+#titleTree span[data-deploy-status='2'] {
+    color: #03AA6D;
 }
